--- a/demo/index.html
+++ b/demo/index.html
@@ -58,7 +58,7 @@
     h2,
     h3 {
       line-height: 1.1;
-      margin-block: 1rem 0.5rem;
+      margin-block: 2rem 1rem;
     }
 
     h1 + div,
@@ -91,6 +91,7 @@
     code {
       white-space: preserve-breaks;
       line-height: 1.1rem;
+      display: block;
     }
 
     code .comment {
@@ -129,8 +130,6 @@
         0 0 0 1px rgb(100, 100, 100),
         0 0 0 2px rgb(50, 50, 50),
         var(--box-shadow);
-      /* transform: skew(10deg, 10deg); */
-      /* transform: perspective(100px) rotateY(45deg); */
     }
 
     .sample header {
@@ -291,9 +290,7 @@
       <h2>QuickStart</h2>
       <h3>Install</h3> 
       <code>
-        <pre>
-$ composer require Gipetto/CowSay
-        </pre>
+        <pre>$ composer require Gipetto/CowSay</pre>
       </code>
 
       <h3>Usage</h3>
@@ -328,6 +325,12 @@ $ composer require Gipetto/CowSay
           </code>
         </div><!-- .code -->
       </div><!-- .sample -->
+
+      <h3>Additional Docs</h3>
+      <ul>
+        <li><a href="https://github.com/Gipetto/CowSay/blob/master/docs/Carcasses.md">Adding custom Carcasses</a></li>
+        <li><a href="https://github.com/Gipetto/CowSay/blob/master/docs/CustomTraits.md">Adding custom Traits</a></li>
+      </ul>
     </section>
 
     <section>
